# portfolio

./: .firebaserc  .gitignore  LICENSE  README.md  config-overrides.js  firebase.json  generate-test-data.js  package-lock.json  package.json  postcss.config.js
.firebase/: hosting.YnVpbGQ.cache
.github/workflows/: cloudflare-hosting-merge.yml  deploy-echopoint.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.zed/: settings.json
analytics-dashboard/: README.md  package-lock.json  package.json
analytics-dashboard/public/: index.html  manifest.json
analytics-dashboard/src/: App.css  App.js  index.css
analytics-worker/: wrangler.toml
analytics-worker/src/: worker.js
portfolio-bg/: Cargo.toml
portfolio-bg/src/: lib.rs
public/: ideas.md  index.html  manifest.json  robots.txt
public/.well-known/: cf-2fa-verify.txt
public/games/: dino-blink.html
public/posts/: _dump.md  comprehensive-test-post.md  dark-net.md  fourth-post.md  ideas.md  log_0000_boot_sequence.md  log_0001_md_showcase.md  log_0002_midnight_patchdrop.md  log_0003_going_open_source.md  log_0004_journey_updates.md  log_0005_finally_it_happened.md  log_0006_simpleclippy.md  log_0007_chaotic_week.md  meta.json  proj_0000_the_reckoning.md  proj_0001_cement_ary_journey.md  proj_0002_greedysnek.md  proj_0003_kill_bad_guys.md  proj_0004_rust_game_engine.md  proj_0005_the_synclippy.md  second-post.md  third-post.md
scripts/: generateMeta.js
src/: App.js  App.module.css  index.css  index.js  react-snakke.d.ts  setupTests.js
src/components/: ResumeOverlay.js  (+1 more)
(+219 files in other folders)
