[package]
name = "portfolio-bg"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
journey-engine = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "CustomEvent", "CustomEventInit", "EventTarget"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
